@@ -1,3 +1,6 @@
+2009-12-10
+    * show drums channel note names 
+
 2009-12-09
     * per channel state for banks, instruments, controllers
     * drums instrument  
